filling node_vector

--- a/Huffman Project/.vscode/launch.json
+++ b/Huffman Project/.vscode/launch.json
@@ -8,7 +8,7 @@
             "name": "g++.exe - Criar e depurar o arquivo ativo",
             "type": "cppdbg",
             "request": "launch",
-            "program": "${fileDirname}\\${fileBasenameNoExtension}.exe",
+            "program": "D:\\Documentos\\UnB10\\CS\\PraticalWorks\\SignalCompression_Pratical\\Huffman Project\\main.exe",
             "args": [],
             "stopAtEntry": false,
             "cwd": "${workspaceFolder}",
