--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,11 @@
 # Folders
 .vscode/
 build/
+Exercises/GTest/test/CMakeFiles/
+
+# CMake
+cmake_install.cmake
+CMakeCache.txt
 
 # Prerequisites
 *.d
